# utils_tests

./: .gitignore  .gitmodules  CMakeLists.txt  a.out  compile_commands.json  tags
headers/: Body.h  World.h  utils.h
src/: Body.cpp  World.cpp  main.cpp  utils.h
src/examples/prototype/: main.cpp
src/examples/void/: main.cpp
